# esp32-heap

./: CMakeLists.txt  Kconfig  Readme.md  component.mk  linker.lf  mem_block.c  mem_block.h  mem_block_group.c  mem_block_group.h  mem_block_list.c  mem_block_list.h  mem_block_map.c  mem_block_map.h  multi_heap.c  multi_heap_internal.h  multi_heap_platform.h
